<resources>
    <string name="app_name">ShopUZapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="createNewAccount">Create new account</string>
    <string name="registerFullNameHint">Full Name</string>
    <string name="registerEmailHint">Email</string>
    <string name="registerPasswordHint">Password</string>
    <string name="registerRegisterButton">Register</string>
    <string name="registerAlreadyRegisteredText">Already registered? Login here</string>
    <string name="loginNewHere">New here? Create account</string>
    <string name="LoginLoginButton">Login</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginEmailHint">Email</string>
    <string name="LoginLoginText">Login to your account</string>
    <string name="shopuzapp">ShopUZapp</string>
    <string name="homeLogoutButton">Logout</string>
    <string name="loginResetPassword">Reset password</string>
    <string name="listingTitleHint">Title</string>
    <string name="listingPriceHint">Price</string>
    <string name="listingDescriptionHint">Description</string>
    <string name="listingLocationHint">City name</string>
    <string name="listingSubmitButton">Save</string>
    <string name="cartIsEmptyMessage">Cart is empty</string>
    <string name="cartTotalAmmount">Total:</string>
    <string name="cartCheckoutButton">checkout</string>
    <string name="listingEditButton">Edit</string>
    <string name="darkModeLabel">Dark mode</string>
    <string name="themeSectionLabel">Theme</string>
    <string name="sortByLabel">Sort by:</string>
    <string name="filterByLabel">Filter by Price:</string>
    <string name="minPriceHint">Min Price</string>
    <string name="maxPriceHint">Max Price</string>
    <string name="applyFilterButton">Apply</string>
    <string name="arrayDefaultSort">Default (No Sort)</string>
    <string name="arrayPriceLowHigh">Price: Low to High</string>
    <string name="arrayPriceHighLow">Price: High to Low</string>
    <string name="arrayTitleAZ">Title: A-Z</string>
    <string name="arrayTitleZA">Title: Z-A</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_selection_title">Language selection</string>
    <string name="language_english">English</string>
    <string name="language_polish">Polski</string>
</resources>