<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shopuzapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.shopuzapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.shopuzapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_listing_detail"
        android:name="com.example.shopuzapp.ui.ListingDetail.ListingDetailFragment"
        android:label="Listing detail"
        tools:layout="@layout/fragment_listing_detail" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.shopuzapp.ui.Cart.CartFragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart"/>
    <fragment
        android:id="@+id/nav_edit_listing"
        android:name="com.example.shopuzapp.ui.EditListing.EditListingFragment"
        android:label="Edit listing"
        tools:layout="@layout/fragment_edit_listing"/>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.shopuzapp.ui.Settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>