<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addLIsting.AddListingActivity">
        <ImageView
            android:id="@+id/editListingPhotoImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <EditText
            android:id="@+id/editListingTitleET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/listingTitleHint"
            android:textSize="24sp"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editListingPhotoImageView"
            app:layout_constraintRight_toRightOf="parent"/>
        <EditText
            android:id="@+id/editListingPriceET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/listingPriceHint"
            android:inputType="number"
            android:textSize="24sp"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editListingTitleET"
            app:layout_constraintRight_toRightOf="parent"/>
        <EditText
            android:id="@+id/editListingDescriptionET"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/listingDescriptionHint"
            android:textSize="24sp"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editListingPriceET"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editListingDescriptionET"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/editSaveListingButton"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/listingSubmitButton" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

