<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Cart.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartItemsRV"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/emptyCartMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartIsEmptyMessage"
        android:textSize="20sp"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/cartTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartTotalAmmount"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cartItemsRV"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/cartTotalAmmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total: "
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cartItemsRV"
        app:layout_constraintLeft_toRightOf="@+id/cartTotalLabel"/>
    <Button
        android:id="@+id/cartCheckoutBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/cartCheckoutButton"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>